Arreglando un problema de rutas con eclipse